--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 <script src="./firebase-database.js"></script>
 <!--<script type="text/javascript" src="app.js" ></script>-->
 <script type="text/javascript">
-const firebaseConfig = {
-  apiKey: "apiKey",
-  authDomain: "authDomain",
-  databaseURL: "databaseURL",
-  projectId: "projectId",
-  storageBucket: "storageBucket",
-  messagingSenderId: "messagingSenderId",
-  appId: "appId",
-  measurementId: "measurementId"
-};
 
+const firebaseConfig = {
+  apiKey: "AIzaSyAmR1HwQTSwv_xYqwBKQJVzYf_er8qVBbQ",
+  authDomain: "ratt-feb17.firebaseapp.com",
+  databaseURL: "https://ratt-feb17-default-rtdb.firebaseio.com",
+  projectId: "ratt-feb17",
+  storageBucket: "ratt-feb17.appspot.com",
+  messagingSenderId: "849129425891",
+  appId: "1:849129425891:web:5a59f35abd31604ac7eed6",
+  measurementId: "G-L4NFBF9MBK"
+};
 firebase.initializeApp(firebaseConfig);
 </script>
 </head>
