--- a/index.html
+++ b/index.html
@@ -15,14 +15,24 @@
 <script type="text/javascript">
 
 const firebaseConfig = {
-  apiKey: "AIzaSyAmR1HwQTSwv_xYqwBKQJVzYf_er8qVBbQ",
-  authDomain: "ratt-feb17.firebaseapp.com",
-  databaseURL: "https://ratt-feb17-default-rtdb.firebaseio.com",
-  projectId: "ratt-feb17",
-  storageBucket: "ratt-feb17.appspot.com",
-  messagingSenderId: "849129425891",
-  appId: "1:849129425891:web:5a59f35abd31604ac7eed6",
-  measurementId: "G-L4NFBF9MBK"
+
+  apiKey: "AIzaSyCTDtF46BnoYEK0dnEKkqqwLVySEgnp-ug",
+
+  authDomain: "mkmods-7e34d.firebaseapp.com",
+
+  databaseURL: "https://mkmods-7e34d-default-rtdb.firebaseio.com",
+
+  projectId: "mkmods-7e34d",
+
+  storageBucket: "mkmods-7e34d.appspot.com",
+
+  messagingSenderId: "1085363499836",
+
+  appId: "1:1085363499836:web:a0476faa7f21b8bdae6439",
+
+  measurementId: "G-J8615S7KN3"
+
+
 };
 firebase.initializeApp(firebaseConfig);
 </script>
